tutos/l01_mario/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mario
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mario
  template:
    metadata:
      labels:
        app: mario
    spec:
      containers:
        - name: mario
          image: pengbai/docker-supermario
