tutos/l01_mario/service.yml
apiVersion: v1
kind: Service
metadata:
  name: mario
spec:
  type: ClusterIP
  ports:
    - name: http
      targetPort: 8080
      port: 80
  selector:
    app: mario
