tutos/l01_mario/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-mario
spec:
  # tls:
  #   - hosts:
  #       - mario.kub.sspcloud.fr
  rules:
    - host: mario.kub.sspcloud.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mario
                port: 
                  number: 80
